# pnpbot

./: .gitignore  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml
pnpbot/: bot.py  character.py
pnpbot/systems/: base.py  dsa.py  hexdec.py
tests/: test_attributes.py  test_character.py  test_dice.py  test_system.py
